fix alignment.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,6 +49,7 @@
 #right-side-text {
   margin: 5px;
   font-family: 'Open Sans', sans-serif;
+  text-align: left;
 }
 
 .project-link-on-card a {
